[project]
name = "githubaiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets",
    "jupyterlab-widgets",
    "openai>=2.46.0",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
    "widgetsnbextension",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
